--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>21-hibernate-with-service-demo</name>
+	<name>22-jpa-cruddemo</name>
 	<comment></comment>
 	<projects>
 	</projects>
